// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/monitoring/values/value should not render when not visible 1`] = `null`;

exports[`ui/monitoring/values/value should render a HTML value 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
    id="msla-html6"
  >
    date/time
  </label>
  <div
    aria-labelledby="msla-html6"
    className="msla-trace-value-text msla-trace-value-html-table"
  >
    <table
      dangerouslySetInnerHTML={
        {
          "__html": "<table><tbody><tr><td>1</td></tr></tbody></table>",
        }
      }
      tabIndex={0}
    />
  </div>
</section>
`;

exports[`ui/monitoring/values/value should render a body link value 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
  >
    displayName
  </label>
  <div
    className="msla-trace-value-text"
  >
    <a
      aria-label="Alt/Option + click to download 'displayName'"
      className="ms-Link root-109"
      href="uri"
      onClick={[Function]}
      rel="noopener"
      target="_blank"
    >
      Download (Alt or Option + select)
    </a>
  </div>
</section>
`;

exports[`ui/monitoring/values/value should render a decimal value 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
  >
    display-name
  </label>
  <div
    className="msla-colorizer-json-body"
  >
    <div
      aria-label="display-name"
      aria-readonly={true}
      className="msla-colorizer-wrapper"
      role="textbox"
      tabIndex={0}
    >
      <div
        className="buttons"
      >
        <button
          aria-label="Select all text in display-name"
          className="ms-Button ms-Button--icon root-110"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-111"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-119 ms-Button-icon icon-113"
              data-icon-name="SelectAll"
              style={
                {
                  "fontFamily": ""FabricMDL2Icons-1"",
                }
              }
            >
              
            </i>
          </span>
        </button>
        <button
          aria-label="Copy the value of {label} to the clipboard"
          className="ms-Button ms-Button--icon root-110"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-111"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-121 ms-Button-icon icon-113"
              data-icon-name="Copy"
              style={
                {
                  "fontFamily": ""FabricMDL2Icons-2"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <pre
        className="prism-code language-json"
        style={
          {
            "backgroundColor": "#ffffff",
            "color": "#000000",
          }
        }
      >
        <div
          className="token-line"
          style={
            {
              "backgroundColor": null,
              "color": "#000000",
            }
          }
        >
          <span
            className="token number"
            style={
              {
                "color": "rgb(9, 134, 88)",
              }
            }
          >
            -123.45
          </span>
        </div>
      </pre>
    </div>
  </div>
</section>
`;

exports[`ui/monitoring/values/value should render a key-value pairs details list 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
  >
    Headers
  </label>
  <div
    className="msla-trace-value-text msla-trace-value-key-value-pairs"
  >
    <div
      className="ms-Viewport"
      style={
        {
          "minHeight": 1,
          "minWidth": 1,
        }
      }
    >
      <div
        className="ms-DetailsList ms-DetailsList--Compact is-horizontalConstrained root-122"
        data-automationid="DetailsList"
        data-is-scrollable="false"
      >
        <div
          aria-colcount={2}
          aria-label="Headers"
          aria-rowcount={4}
          role="grid"
        >
          <div
            className="ms-DetailsList-headerWrapper"
            onKeyDown={[Function]}
            role="presentation"
          >
            <div
              aria-label="Headers"
              className="ms-FocusZone css-140 ms-DetailsHeader root-124"
              data-automationid="DetailsHeader"
              data-focuszone-id="FocusZone9"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              onMouseMove={[Function]}
              role="row"
            >
              <div
                aria-label="Key"
                aria-sort="none"
                className="ms-DetailsHeader-cell is-actionable root-141"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable={false}
                data-is-focusable="true"
                data-item-key="$key"
                draggable={false}
                role="columnheader"
                style={
                  {
                    "width": 120,
                  }
                }
              >
                <span
                  className="cellTooltip-149"
                >
                  <span
                    className="ms-DetailsHeader-cellTitle cellTitle-147"
                    id="header8-$key"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                  >
                    <span
                      className="ms-DetailsHeader-cellName cellName-148"
                      id="header8-$key-name"
                    >
                      Key
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-hidden={true}
                className="ms-DetailsHeader-cellSizer cellSizer-131 cellSizerStart-132"
                data-is-focusable={false}
                data-sizer-index={0}
                onBlur={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                role="button"
              />
              <div
                aria-label="Value"
                aria-sort="none"
                className="ms-DetailsHeader-cell is-actionable root-141"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable={false}
                data-is-focusable="true"
                data-item-key="$value"
                draggable={false}
                role="columnheader"
                style={
                  {
                    "width": 120,
                  }
                }
              >
                <span
                  className="cellTooltip-149"
                >
                  <span
                    className="ms-DetailsHeader-cellTitle cellTitle-147"
                    id="header8-$value"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                  >
                    <span
                      className="ms-DetailsHeader-cellName cellName-148"
                      id="header8-$value-name"
                    >
                      Value
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-hidden={true}
                className="ms-DetailsHeader-cellSizer cellSizer-131 cellSizerEnd-133"
                data-is-focusable={false}
                data-sizer-index={1}
                onBlur={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                role="button"
              />
            </div>
          </div>
          <div
            className="ms-DetailsList-contentWrapper"
            onKeyDown={[Function]}
            role="presentation"
          >
            <div
              className="ms-SelectionZone"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onFocusCapture={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onMouseDown={[Function]}
              onMouseDownCapture={[Function]}
              role="presentation"
            >
              <div
                className="ms-FocusZone css-140 focusZone-123"
                data-focuszone-id="FocusZone10"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDownCapture={[Function]}
              >
                <div
                  className="ms-List"
                  role="presentation"
                >
                  <div
                    className="ms-List-surface"
                    role="presentation"
                  >
                    <div
                      className="ms-List-page"
                      role="presentation"
                      style={{}}
                    >
                      <div
                        className="ms-List-cell"
                        data-automationid="ListCell"
                        data-list-index={0}
                        role="presentation"
                      >
                        <div
                          aria-rowindex={2}
                          className="ms-FocusZone css-140 ms-DetailsRow root-155"
                          data-automationid="DetailsRow"
                          data-focuszone-id="FocusZone12"
                          data-is-focusable={true}
                          data-item-index={0}
                          data-selection-index={0}
                          data-selection-touch-invoke={true}
                          id="row7-0"
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onMouseDownCapture={[Function]}
                          role="row"
                        >
                          <div
                            className="ms-DetailsRow-fields fields-161"
                            data-automationid="DetailsRowFields"
                            role="presentation"
                          >
                            <div
                              className="ms-DetailsRow-cell isMultiline-163 ms-DetailsRow-cell cell-158 cellUnpadded-156"
                              data-automation-key="$key"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style={
                                {
                                  "width": 120,
                                }
                              }
                            >
                              Access-Control-Allow-Credentials
                            </div>
                            <div
                              className="ms-DetailsRow-cell isMultiline-163 ms-DetailsRow-cell cell-158 cellUnpadded-156"
                              data-automation-key="$value"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style={
                                {
                                  "width": 120,
                                }
                              }
                            >
                              true
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        className="ms-List-cell"
                        data-automationid="ListCell"
                        data-list-index={1}
                        role="presentation"
                      >
                        <div
                          aria-rowindex={3}
                          className="ms-FocusZone css-140 ms-DetailsRow root-155"
                          data-automationid="DetailsRow"
                          data-focuszone-id="FocusZone14"
                          data-is-focusable={true}
                          data-item-index={1}
                          data-selection-index={1}
                          data-selection-touch-invoke={true}
                          id="row7-1"
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onMouseDownCapture={[Function]}
                          role="row"
                        >
                          <div
                            className="ms-DetailsRow-fields fields-161"
                            data-automationid="DetailsRowFields"
                            role="presentation"
                          >
                            <div
                              className="ms-DetailsRow-cell isMultiline-163 ms-DetailsRow-cell cell-158 cellUnpadded-156"
                              data-automation-key="$key"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style={
                                {
                                  "width": 120,
                                }
                              }
                            >
                              Access-Control-Allow-Origin
                            </div>
                            <div
                              className="ms-DetailsRow-cell isMultiline-163 ms-DetailsRow-cell cell-158 cellUnpadded-156"
                              data-automation-key="$value"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style={
                                {
                                  "width": 120,
                                }
                              }
                            >
                              *
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        className="ms-List-cell"
                        data-automationid="ListCell"
                        data-list-index={2}
                        role="presentation"
                      >
                        <div
                          aria-rowindex={4}
                          className="ms-FocusZone css-140 ms-DetailsRow root-155"
                          data-automationid="DetailsRow"
                          data-focuszone-id="FocusZone16"
                          data-is-focusable={true}
                          data-item-index={2}
                          data-selection-index={2}
                          data-selection-touch-invoke={true}
                          id="row7-2"
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onMouseDownCapture={[Function]}
                          role="row"
                        >
                          <div
                            className="ms-DetailsRow-fields fields-161"
                            data-automationid="DetailsRowFields"
                            role="presentation"
                          >
                            <div
                              className="ms-DetailsRow-cell isMultiline-163 ms-DetailsRow-cell cell-158 cellUnpadded-156"
                              data-automation-key="$key"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style={
                                {
                                  "width": 120,
                                }
                              }
                            >
                              Referrer-Policy
                            </div>
                            <div
                              className="ms-DetailsRow-cell isMultiline-163 ms-DetailsRow-cell cell-158 cellUnpadded-156"
                              data-automation-key="$value"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style={
                                {
                                  "width": 120,
                                }
                              }
                            >
                              no-referred-when-downgrade
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`ui/monitoring/values/value should render a number value 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
  >
    display-name
  </label>
  <div
    className="msla-colorizer-json-body"
  >
    <div
      aria-label="display-name"
      aria-readonly={true}
      className="msla-colorizer-wrapper"
      role="textbox"
      tabIndex={0}
    >
      <div
        className="buttons"
      >
        <button
          aria-label="Select all text in display-name"
          className="ms-Button ms-Button--icon root-110"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-111"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-119 ms-Button-icon icon-113"
              data-icon-name="SelectAll"
              style={
                {
                  "fontFamily": ""FabricMDL2Icons-1"",
                }
              }
            >
              
            </i>
          </span>
        </button>
        <button
          aria-label="Copy the value of {label} to the clipboard"
          className="ms-Button ms-Button--icon root-110"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-111"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-121 ms-Button-icon icon-113"
              data-icon-name="Copy"
              style={
                {
                  "fontFamily": ""FabricMDL2Icons-2"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <pre
        className="prism-code language-json"
        style={
          {
            "backgroundColor": "#ffffff",
            "color": "#000000",
          }
        }
      >
        <div
          className="token-line"
          style={
            {
              "backgroundColor": null,
              "color": "#000000",
            }
          }
        >
          <span
            className="token number"
            style={
              {
                "color": "rgb(9, 134, 88)",
              }
            }
          >
            -123.45
          </span>
        </div>
      </pre>
    </div>
  </div>
</section>
`;

exports[`ui/monitoring/values/value should render a raw value 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
  >
    raw
  </label>
  <div
    className="msla-colorizer-json-body"
  >
    <div
      aria-label="raw"
      aria-readonly={true}
      className="msla-colorizer-wrapper"
      role="textbox"
      tabIndex={0}
    >
      <div
        className="buttons"
      >
        <button
          aria-label="Select all text in raw"
          className="ms-Button ms-Button--icon root-110"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-111"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-119 ms-Button-icon icon-113"
              data-icon-name="SelectAll"
              style={
                {
                  "fontFamily": ""FabricMDL2Icons-1"",
                }
              }
            >
              
            </i>
          </span>
        </button>
        <button
          aria-label="Copy the value of {label} to the clipboard"
          className="ms-Button ms-Button--icon root-110"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-111"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-121 ms-Button-icon icon-113"
              data-icon-name="Copy"
              style={
                {
                  "fontFamily": ""FabricMDL2Icons-2"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <pre
        className="prism-code language-json"
        style={
          {
            "backgroundColor": "#ffffff",
            "color": "#000000",
          }
        }
      >
        <div
          className="token-line"
          style={
            {
              "backgroundColor": null,
              "color": "#000000",
            }
          }
        >
          <span
            className="token plain"
          >
            Hello World
          </span>
        </div>
      </pre>
    </div>
  </div>
</section>
`;

exports[`ui/monitoring/values/value should render an XML value 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
  >
    XML
  </label>
  <div
    className="msla-colorizer-json-body"
  >
    <div
      aria-label="XML"
      aria-readonly={true}
      className="msla-colorizer-wrapper"
      role="textbox"
      tabIndex={0}
    >
      <div
        className="buttons"
      >
        <button
          aria-label="Select all text in XML"
          className="ms-Button ms-Button--icon root-110"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-111"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-119 ms-Button-icon icon-113"
              data-icon-name="SelectAll"
              style={
                {
                  "fontFamily": ""FabricMDL2Icons-1"",
                }
              }
            >
              
            </i>
          </span>
        </button>
        <button
          aria-label="Copy the value of {label} to the clipboard"
          className="ms-Button ms-Button--icon root-110"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-111"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-121 ms-Button-icon icon-113"
              data-icon-name="Copy"
              style={
                {
                  "fontFamily": ""FabricMDL2Icons-2"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <pre
        className="prism-code language-json"
        style={
          {
            "backgroundColor": "#ffffff",
            "color": "#000000",
          }
        }
      >
        <div
          className="token-line"
          style={
            {
              "backgroundColor": null,
              "color": "#000000",
            }
          }
        >
          <span
            className="token plain"
          >
            &lt;xml&gt;&lt;/xml&gt;
          </span>
        </div>
      </pre>
    </div>
  </div>
</section>
`;
